# AppFavoritos

./: .gitignore  API.py  pyproject.toml
Config/: configuration.py
Database/: DataBase.py
Entities/: Category.py  Excerpts.py  Favorites.py  Tags.py  TagsToFavorite.py  User.py
Entities/DTOs/: DTOs.py
Repositories/: CategoryRepository.py  ExcerptRepository.py  FavoriteRepository.py  TagRepository.py  TagsToFavoriteRepository.py  UserRepository.py
