[tool.poetry]
name = "backendfavorito"
version = "0.1.0"
description = ""
authors = ["Amarildo <amarildozj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pyodbc = "^5.1.0"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
